--- a/src/components/Header/headerstyle.css
+++ b/src/components/Header/headerstyle.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 .header {
     width: 100%;
     height: 70px;
@@ -12,5 +21,51 @@
 
 .logo {
     display: flex;
+    align-items: center;
     column-gap: 8px;
+}
+
+.logo img {
+    width: 40px;
+    height: 40px;
+}
+
+.logo h1 {
+    padding: 0;
+    margin: 0;
+    font-size: 2rem;
+    font-weight: 700;
+    font-style: italic;
+}
+
+.menu {
+    display: flex;
+    align-items: center;
+    column-gap: 2.7rem;
+}
+
+.nav__item a {
+    font-weight: 300;
+    cursor: pointer;
+}
+
+body {
+    font-family: "Poppins", sans-serif;
+}
+
+img {
+    width: 100%;
+}
+
+section {
+    padding: 60px 0px;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+    color: unset;
 }
