--- a/src/components/Header/headerstyle.css
+++ b/src/components/Header/headerstyle.css
@@ -111,6 +111,13 @@
     font-size: 0.9rem;
     font-weight: 300;
     cursor: pointer;
+    letter-spacing: 0.5rem;
+}
+
+.nav-item a:hover {
+    border-bottom: 2px solid #244855;
+    padding-bottom: 2px;
+    transition: 0.3s;
 }
 
 body {
