--- a/src/components/Header/headerstyle.css
+++ b/src/components/Header/headerstyle.css
@@ -112,12 +112,12 @@
     font-weight: 300;
     cursor: pointer;
     letter-spacing: 0.5rem;
+    border-bottom: 2px solid transparent;
+    transition: all 0.2s;
 }
 
 .nav-item a:hover {
     border-bottom: 2px solid #244855;
-    padding-bottom: 2px;
-    transition: 0.3s;
 }
 
 body {
